--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,14 @@ flutter:
         - asset: assets/fonts/Cairo-Regular.ttf
           weight: 400
           style: normal
-        - asset: assets/fonts/Cairo-Light.ttf
-          weight: 300
         - asset: assets/fonts/Cairo-SemiBold.ttf
           weight: 600
         - asset: assets/fonts/Cairo-ExtraBold.ttf
+          weight: 800
+    - family: Product
+      fonts:
+        - asset: assets/fonts/Product Sans Regular.ttf
+          weight: 400
+          style: normal
+        - asset: assets/fonts/Product Sans Bold.ttf
           weight: 800
